Bug 144753 - exceptionFuzz tests should explicitly initialize the exceptionFuzz boolean in JavaScript code through a function in jsc.cpp
Summary: exceptionFuzz tests should explicitly initialize the exceptionFuzz boolean in...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Saam Barati
URL:
Keywords:
Depends on:
Blocks: 144178
  Show dependency treegraph
 
Reported: 2015-05-07 12:25 PDT by Saam Barati
Modified: 2015-05-07 17:22 PDT (History)
8 users (show)

See Also:


Attachments
patch (6.17 KB, patch)
2015-05-07 16:29 PDT, Saam Barati
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Saam Barati 2015-05-07 12:25:39 PDT
This allows the byte code generator to emit byte code that "may" throw exceptions
as part of the setup code without worrying that this code will increment the exceptionFuzz
counter. We don't want setup code to increment the exceptionFuzz counter because if the limit
is reached in setup code there will obviously not be an exception handler to catch the exception
and we end up not testing anything of significance.
Comment 1 Saam Barati 2015-05-07 16:29:33 PDT
Created attachment 252646 [details]
patch
Comment 2 Mark Lam 2015-05-07 16:31:40 PDT
Comment on attachment 252646 [details]
patch

r=me
Comment 3 WebKit Commit Bot 2015-05-07 17:22:21 PDT
Comment on attachment 252646 [details]
patch

Clearing flags on attachment: 252646

Committed r183962: <http://trac.webkit.org/changeset/183962>
Comment 4 WebKit Commit Bot 2015-05-07 17:22:26 PDT
All reviewed patches have been landed.  Closing bug.