exceptionFuzz tests should explicitly initialize the exceptionFuzz boolean in JavaScript code through a function in jsc.cpp https://bugs.webkit.org/show_bug.cgi?id=144753

Reviewed by Mark Lam.

Source/JavaScriptCore:

This allows the BytecodeGenerator to freely emit startup code that "may"
throw exceptions without worrying that this startup code will trigger
the exceptionFuzz exception. The exceptionFuzz counter will only begin
ticking when the 'enableExceptionFuzz' function is explicitly called in
the exceptionFuzz tests.

* jsc.cpp:
(GlobalObject::finishCreation):
(functionEnableExceptionFuzz):
* tests/exceptionFuzz/3d-cube.js:
* tests/exceptionFuzz/date-format-xparb.js:
* tests/exceptionFuzz/earley-boyer.js:

Tools:

* Scripts/jsc-stress-test-helpers/js-exception-fuzz:


Canonical link: https://commits.webkit.org/162794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183962 268f45cc-cd09-0410-ab3c-d52691b4dbfc