Source/JavaScriptCore/tests/exceptionFuzz/earley-boyer.js
@@ -39,6 +39,8 @@ function initRuntime() {
 }
 */
 
+enableExceptionFuzz();
+
 
 function sc_print_debug() {
     sc_print.apply(null, arguments);
